test_case/rust-lang_rust/32711_205208177.rs
 rust
fn main() {
    a?; //~ ERROR 2:5: 2:7
}
